--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <h1>Git</h1>
+    <h2>Git vezba</h2>
 
     <p>Moj prvi pasus</p>
     <p>Moj drugi pasus</p>
+    <p>Moj treci pasus</p>
+
+    <img src="./img/novi_sad.jpg" alt="Novi Sad">
     
 </body>
 </html>
